--- a/QuartzSchedulerWithRabbit/QuartzSchedulerWithRabbit.csproj
+++ b/QuartzSchedulerWithRabbit/QuartzSchedulerWithRabbit.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
 </Project>
