--- a/QuartzSchedulerWithRabbit/QuartzSchedulerWithRabbit.csproj
+++ b/QuartzSchedulerWithRabbit/QuartzSchedulerWithRabbit.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
